src/objects/Upgrade__c.object
<CustomObject>
    <description>Custom object to track customer upgrades</description>
    <fields>
        <fullName>BI_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the component is complete</description>
        <inlineHelpText>This box indicates whether the component is complete</inlineHelpText>
        <label>BI Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date__c</fullName>
        <description>Date when the customer requested the upgrade</description>
        <inlineHelpText>Enter the Date when the customer requested the upgrade</inlineHelpText>
        <label>Customer Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cut_over_Date__c</fullName>
        <description>Date when the customer is doing a cut-over of production to the new environment</description>
        <inlineHelpText>Enter the Date when the customer is doing a cut-over of production to the new environment</inlineHelpText>
        <label>Cut-over Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the component is complete</description>
        <inlineHelpText>This box indicates whether the component is complete</inlineHelpText>
        <label>DI Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DI_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the component is required</description>
        <inlineHelpText>This box indicates whether the component is required</inlineHelpText>
        <label>Data Integration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DW_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the component is complete</description>
        <inlineHelpText>This box indicates whether the component is complete</inlineHelpText>
        <label>DW Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DW_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the component is required</description>
        <inlineHelpText>This box indicates whether the component is required</inlineHelpText>
        <label>Data Warehouse Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_lkp__c</fullName>
        <description>Engagement parent of the upgrade</description>
        <inlineHelpText>Enter the Engagement parent of the upgrade</inlineHelpText>
        <label>Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Upgrades</relationshipLabel>
        <relationshipName>Upgrades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_Datacenter__c</fullName>
        <description>Data Center that has the current environment to be upgraded</description>
        <inlineHelpText>Enter the Data Center that has the current environment to be upgraded</inlineHelpText>
        <label>From Datacenter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ashburn 1.0</fullName>
                    <default>true</default>
                    <label>Ashburn 1.0</label>
                </value>
                <value>
                    <fullName>Ashburn 3.0</fullName>
                </value>
                <value>
                    <fullName>London 1.0</fullName>
                </value>
                <value>
                    <fullName>Seattle 3.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_MSTR_Version__c</fullName>
        <description>MicroStrategy Version for the Current Environment</description>
        <inlineHelpText>Enter the MicroStrategy Version for the Current Environment</inlineHelpText>
        <label>From MSTR Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9.4.1 HF4</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF3</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF2</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF1</fullName>
                    <default>true</default>
                    <label>9.4.1 HF1</label>
                </value>
                <value>
                    <fullName>9.4.1</fullName>
                </value>
                <value>
                    <fullName>9.4.0</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF3</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF2</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF1</fullName>
                </value>
                <value>
                    <fullName>9.3.1 GA</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF4</fullName>
                </value>
                <value>
                    <fullName>9.3.0 GA</fullName>
                </value>
                <value>
                    <fullName>9.3.0 HF1</fullName>
                </value>
                <value>
                    <fullName>9.3.0 HF2</fullName>
                </value>
                <value>
                    <fullName>9.3.0 HF3</fullName>
                </value>
                <value>
                    <fullName>9.3.0 HF4</fullName>
                </value>
                <value>
                    <fullName>9.2.1m GA</fullName>
                </value>
                <value>
                    <fullName>9.2.1m HF1</fullName>
                </value>
                <value>
                    <fullName>9.2.1m HF2</fullName>
                </value>
                <value>
                    <fullName>9.2.1m HF3</fullName>
                </value>
                <value>
                    <fullName>9.2.1m HF4</fullName>
                </value>
                <value>
                    <fullName>9.2.1m HF5</fullName>
                </value>
                <value>
                    <fullName>9.2.1 GA</fullName>
                </value>
                <value>
                    <fullName>9.2.1 HF1</fullName>
                </value>
                <value>
                    <fullName>9.2.1 HF2</fullName>
                </value>
                <value>
                    <fullName>9.2.1 HF3</fullName>
                </value>
                <value>
                    <fullName>9.2.1 HF11</fullName>
                </value>
                <value>
                    <fullName>9.0.2 GA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HDR_Ticket__c</fullName>
        <description>Provide a link to the HDR ticket # for quick reference</description>
        <inlineHelpText>Provide a link to the HDR ticket # for quick reference</inlineHelpText>
        <label>HDR Ticket #</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes related to the Upgrade</description>
        <inlineHelpText>Enter Notes related to the Upgrade</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_BI__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This box indicates whether the component is required</description>
        <inlineHelpText>This box indicates whether the component is required</inlineHelpText>
        <label>Required BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Ticket__c</fullName>
        <description>Provide a link to the support central case # for quick reference</description>
        <inlineHelpText>Provide a link to the support central case # for quick reference</inlineHelpText>
        <label>Support Ticket #</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>To_Data_Center__c</fullName>
        <description>Data Center that will have the upgraded environment</description>
        <inlineHelpText>Enter the Data Center that will have the upgraded environment</inlineHelpText>
        <label>To Data Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ashburn 1.0</fullName>
                </value>
                <value>
                    <fullName>Ashburn 3.0</fullName>
                </value>
                <value>
                    <fullName>London 1.0</fullName>
                </value>
                <value>
                    <fullName>Seattle 3.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_MSTR_Version__c</fullName>
        <description>Target MicroStrategy Version for the New Environment</description>
        <inlineHelpText>Enter the Target MicroStrategy Version for the New Environment</inlineHelpText>
        <label>To MSTR Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9.4.1 HF4</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF3</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF2</fullName>
                </value>
                <value>
                    <fullName>9.4.1 HF1</fullName>
                    <default>true</default>
                    <label>9.4.1 HF1</label>
                </value>
                <value>
                    <fullName>9.4.1</fullName>
                </value>
                <value>
                    <fullName>9.4.0</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF3</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF2</fullName>
                </value>
                <value>
                    <fullName>9.3.1 HF1</fullName>
                </value>
                <value>
                    <fullName>9.3.1 GA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_End_Date__c</fullName>
        <description>Date when the upgrade was finished</description>
        <inlineHelpText>Enter the Date when the upgrade was finished</inlineHelpText>
        <label>Upgrade End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter the upgrade owner</inlineHelpText>
        <label>Upgrade Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Upgrades</relationshipLabel>
        <relationshipName>Upgrades</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upgrade_Release_Date__c</fullName>
        <description>Date when the upgraded environment was released to the customer</description>
        <inlineHelpText>Enter the Date when the upgraded environment was released to the customer</inlineHelpText>
        <label>Upgrade Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Start_Date__c</fullName>
        <description>Date when the upgrade was started</description>
        <inlineHelpText>Enter the Date when the upgrade was started</inlineHelpText>
        <label>Upgrade Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Status__c</fullName>
        <description>Current status for the Upgrade</description>
        <inlineHelpText>Enter the current status for the Upgrade</inlineHelpText>
        <label>Upgrade Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Initiated Request</fullName>
                    <default>true</default>
                    <label>Customer Initiated Request</label>
                </value>
                <value>
                    <fullName>Work-Order Created</fullName>
                </value>
                <value>
                    <fullName>Checklist completed</fullName>
                </value>
                <value>
                    <fullName>Work-Order Submitted</fullName>
                </value>
                <value>
                    <fullName>VMs Created</fullName>
                </value>
                <value>
                    <fullName>Application(s) Installed</fullName>
                </value>
                <value>
                    <fullName>VPN Setup</fullName>
                </value>
                <value>
                    <fullName>Website DNS Setup</fullName>
                </value>
                <value>
                    <fullName>Configuration Complete</fullName>
                </value>
                <value>
                    <fullName>QA Complete</fullName>
                </value>
                <value>
                    <fullName>Customer Validation In Progress</fullName>
                </value>
                <value>
                    <fullName>Upgrade Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgrade_Validation_Date__c</fullName>
        <description>Date when the customer validated the upgraded environment as having been successfully upgraded</description>
        <inlineHelpText>Enter the Date when the customer validated the upgraded environment as having been successfully upgraded</inlineHelpText>
        <label>Upgrade Validation Date</label>
        <type>Date</type>
    </fields>
    <label>Upgrade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Upgrade_Owner__c</columns>
        <columns>From_Datacenter__c</columns>
        <columns>To_Data_Center__c</columns>
        <columns>Upgrade_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Upgrades</label>
    </listViews>
    <listViews>
        <fullName>Cloud_Upgrades</fullName>
        <columns>NAME</columns>
        <columns>Upgrade_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Upgrade_Status__c</columns>
        <columns>Upgrade_Start_Date__c</columns>
        <columns>Upgrade_Release_Date__c</columns>
        <columns>From_Datacenter__c</columns>
        <columns>To_Data_Center__c</columns>
        <columns>From_MSTR_Version__c</columns>
        <columns>To_MSTR_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cloud Upgrades</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>Upgrade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upgrades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>